fixing for both linux and mac. added tokio async

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,15 @@ cc = "1.0"
 [dependencies]
 libc  = "0.2"
 os_socketaddr = "0.2.2"
+tokio = { version = "1", features = ["net"], optional = true }
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
+
+[features]
+async_tokio = ["tokio"]
+
+[[example]]
+name = "tokio_udp_server"
+path = "examples/tokio_udp_server.rs"
+required-features = ["async_tokio"]
