--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,14 +23,22 @@ cc = "1.0"
 libc  = "0.2"
 os_socketaddr = "0.2.2"
 tokio = { version = "1", features = ["net"], optional = true }
+async-std = { version = "1.12", optional = true }
+async-io = { version = "*", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 
 [features]
 async_tokio = ["tokio"]
+async_std = ["async-std", "async-io"]
 
 [[example]]
 name = "tokio_udp_server"
 path = "examples/tokio_udp_server.rs"
 required-features = ["async_tokio"]
+
+[[example]]
+name = "async_std_udp_server"
+path = "examples/async_std_udp_server.rs"
+required-features = ["async_std"]
